--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: Inter;
+}
+
 .container{
     width: 1056px;
     margin-left: auto;
@@ -5,4 +9,157 @@
     padding-left: 12px;
     padding-right: 12px;
     outline: 1px solid blue;
+}
+
+.header{
+    border-bottom: 3px solid #FFF;
+background: rgba(43, 74, 97, 0.87);
+}
+
+.header-logo{
+    width: 186px;
+height: 72px;
+flex-shrink: 0;
+}
+
+.nav-link{
+    color: #FFF;
+text-align: center;
+font-size: 20px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+}
+
+.nav-link:hover{
+    color: #94CFFF;
+text-align: center;
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+}
+
+.nav-button{
+    width: 141px;
+height: 41.694px;
+flex-shrink: 0;
+}
+
+.nav-href{
+    color: #26C6EA;
+text-align: justify;
+font-family: HeadlandOne;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.language-link{
+    color: #FFF;
+text-align: center;
+font-family: "Hammersmith One";
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.hero{
+    background: url(<path-to-image>) lightgray 50% / cover no-repeat;
+background-image: url(../img/hero.png);
+
+}
+
+.hero-title{
+    color: #FFF;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+width: 376px;
+height: 123px;
+flex-shrink: 0;
+}
+
+.hero-button{
+    width: 260px;
+height: 80px;
+flex-shrink: 0;
+border-radius: 45px 0px;
+border: 3px solid #26C7EA;
+background: #0B0E66;
+}
+
+.hero-href{
+    color: #26C7EA;
+text-align: center;
+font-family: HeadlandOne;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+width: 199px;
+}
+
+.hero-instagram{
+    width: 30px;
+height: 30px;
+flex-shrink: 0;
+}
+
+.hero-twiter{
+    width: 34px;
+height: 30px;
+flex-shrink: 0;
+}
+
+.hero-youtube{
+    width: 50px;
+height: 30px;
+flex-shrink: 0;
+}
+
+
+.background{
+    background: #FFF;
+    width: 1440px;
+    height: 350px;
+    flex-shrink: 0;
+}
+.egle-title{
+    color: #0A3853;
+text-align: justify;
+font-size: 36px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.egle-text{
+    color: #000;
+text-align: center;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.egle-img{
+    width: 400px;
+height: 120px;
+flex-shrink: 0;
+}
+
+
+.girl-background{
+    width: 1440px;
+    height: 741px;
+    flex-shrink: 0;
+    background-image: url(../img/girl.jpg);
+}
+
+.background-navi{
+    background-image: url(../img/snow.png);
 }
