--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,6 @@ margin-top: 8px;
 }
 
 
-
 .girl{
     background-image: url(../img/girl.png);
     padding-top: 330px;
@@ -221,6 +220,116 @@ border: 3px solid #26C7EA;
 background: #0B0E66;
 }
 
-.background-navi{
+
+.citata{
+    padding-top: 75px;
+    padding-bottom: 10px;
+}
+
+.citata-title{
+    color: #141414;
+text-align: center;
+font-size: 36px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.citata-text{
+    color: #000;
+text-align: center;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.navi{
     background-image: url(../img/snow.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.navi-title{
+    color: #141414;
+text-align: center;
+font-family: HeadlandOne;
+font-size: 32px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+padding-top: 58px;
+}
+
+.navi-div{
+    width: 320px;
+    height: 240px;
+    flex-shrink: 0;
+background: rgba(255, 255, 255, 0.70);
+}
+
+.navi-caption{
+    color: #141414;
+text-align: center;
+font-family: HeadlandOne;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 100% */
+}
+
+.navi-img{
+    width: 152px;
+height: 40px;
+flex-shrink: 0;
+align-items: center;
+}
+
+.navi-text{
+color: #000;
+text-align: center;
+font-family: HeadlandOne;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 100% */
+}
+
+.navi-list{
+    display: flex;
+    gap: 36px;
+    flex-wrap: wrap;
+    padding-bottom: 57px;
+    padding-left: auto;
+    padding-right: auto;
+}
+
+.footer{
+    padding-top: 76px;
+    padding-bottom: 77px;
+    background: rgba(43, 74, 97, 0.87);
+}
+.footer-box{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.footer-logo{
+    width: 186px;
+    height: 72px;
+    flex-shrink: 0;
+}
+
+.footer-text{
+    color: #FFF;
+text-align: center;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.footer-list{
+    display: flex;
 }
