--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,12 @@ height: 123px;
 flex-shrink: 0;
 }
 
+.hero-img{
+    width: 152px;
+height: 40px;
+flex-shrink: 0;
+}
+
 .hero-button{
     width: 260px;
 height: 80px;
@@ -220,8 +226,13 @@ border: 3px solid #26C7EA;
 background: #0B0E66;
 }
 
-
 .citata{
+    padding-top: 75px;
+    padding-bottom: 10px;
+}
+
+
+.neytiri{
     padding-top: 75px;
     padding-bottom: 10px;
 }
@@ -260,13 +271,22 @@ font-style: normal;
 font-weight: 400;
 line-height: normal;
 padding-top: 58px;
+padding-bottom: 45px;
 }
+
 
 .navi-div{
     width: 320px;
     height: 240px;
-    flex-shrink: 0;
+gap: 36px;
 background: rgba(255, 255, 255, 0.70);
+padding-top: 36px;
+padding-bottom: 36px;
+display: flex;
+flex-direction: column;
+align-items: center;
+
+
 }
 
 .navi-caption{
@@ -277,6 +297,7 @@ font-size: 24px;
 font-style: normal;
 font-weight: 400;
 line-height: 24px; /* 100% */
+
 }
 
 .navi-img{
@@ -284,6 +305,7 @@ line-height: 24px; /* 100% */
 height: 40px;
 flex-shrink: 0;
 align-items: center;
+
 }
 
 .navi-text{
@@ -313,23 +335,42 @@ line-height: 24px; /* 100% */
 .footer-box{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 80px;
 }
 .footer-logo{
     width: 186px;
     height: 72px;
     flex-shrink: 0;
+    
+}
+
+.footer-line{
+    width: 2px;
+height: 153px;
+background-color: #FFF;
 }
 
 .footer-text{
     color: #FFF;
-text-align: center;
 font-size: 20px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
 }
 
+.footer-item:last-child > .footer-text{
+    text-align: center;
+}
+
 .footer-list{
     display: flex;
+    flex-direction: column;
+    
+}
+.footer-item{
+    margin-bottom: 16px;
+
+}
+.footer-item:nth-child(2){
+    margin-bottom: 37px;
 }
