--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,7 @@ line-height: normal;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    padding-top: 68px;
 }
 
 .navi-title{
@@ -270,8 +271,7 @@ font-size: 32px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
-padding-top: 58px;
-padding-bottom: 45px;
+margin-bottom: 45px;
 }
 
 
@@ -322,9 +322,7 @@ line-height: 24px; /* 100% */
     display: flex;
     gap: 36px;
     flex-wrap: wrap;
-    padding-bottom: 57px;
-    padding-left: auto;
-    padding-right: auto;
+
 }
 
 .footer{
