--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,13 @@ flex-shrink: 0;
 border-radius: 45px 0px;
 border: 3px solid #26C7EA;
 background: #0B0E66;
+padding-top: 9px;
+padding-bottom: 8px;
+padding-left: 38px;
+padding-right: 38px;
+color: #26C6EA;
+font-family: HeadlandOne;
+font-size: 20px;
 }
 
 .nav-href{
@@ -126,28 +133,13 @@ flex-shrink: 0;
 border-radius: 45px 0px;
 border: 3px solid #26C7EA;
 background: #0B0E66;
-}
-
-.hero-link{
-    color: #26C7EA;
-text-align: center;
+padding: 10px 30px;
+color: #26C7EA;
 font-family: HeadlandOne;
 font-size: 24px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
 }
 
-.hero-href{
-    color: #26C7EA;
-text-align: center;
-font-family: HeadlandOne;
-font-size: 24px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-width: 199px;
-}
+
 
 
 
