--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,29 @@ height: 30px;
 flex-shrink: 0;
 }
 
+.hero-icon{
+    width: 30px;
+height: 30px;
+fill: #FFF;
+}
+
+.hero-icon:hover{
+    fill: #26C6EA;
+}
+.hero-item:nth-child(2){
+    .hero-icon{
+        width: 34px;
+height: 30px;
+    }
+}
+
+.hero-item:nth-child(3){
+    .hero-icon{
+        width: 50px;
+        height: 30px;
+    }
+}
+
 .egle{
     padding-top: 75px;
     padding-bottom: 10px;
