--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,24 @@ padding-right: 38px;
 color: #26C6EA;
 font-family: HeadlandOne;
 font-size: 20px;
+animation-name: scale-btn;
+animation-duration: 500ms;
+animation-iteration-count: infinite;
+animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+animation-direction: reverse;
+}
+
+@keyframes scale-btn{
+    0%{
+background-color: #0B0E66;
+color: #26C6EA;
+transform: scale(0.9);
+    }
+    100%{
+background-color: #26C6EA;
+color: #0B0E66;
+transform: scale(1.1);
+    }
 }
 
 .nav-href{
